package org.example;

interface IComensal {
    public void setNext(IComensal comensal);
    public void agarrarPlato(Plato plato);
}
