@startuml
'https://plantuml.com/class-diagram

skinparam Linetype ortho
title "Ejercicio 35"

class Mozo {
    - platos : List<Plato>

    + entregarPlatos(comensal : IComensal)
}

interface IComensal {
    + setNext(next : IComensal)
    + agarrarPlato(plato : Plato) : void
}

class Comensal implements IComensal {
    - next : IComensal
    - plato : Plato

    + setNext(next : IComensal)
    + puedeAgarrarPlato(plato : Plato) : boolean
    + agarrarPlato(plato : Plato) : void
}

note right of Comensal::puedeAgarrarPlato
    public boolean puedeAgarrarPlato(Plato plato) {
        return this.plato.getNombre().equals(plato.getNombre());
    }
end note

note right of Comensal::agarrarPlato
    public void agarrarPlato(Plato plato) {
        if (this.puedeAgarrarPlato(plato)) {
            System.out.println("El comensal agarró el plato " + plato.getNombre());
        } else {
            this.next.agarrarPlato(plato);
        }
    }
end note

class Plato {
    - nombre : String
}

'relaciones
Plato --o Comensal
Plato <--o Mozo
IComensal <-- Mozo
Mozo -[hidden]r- Plato
Plato -[hidden]r- Comensal
@enduml